--- a/index.html
+++ b/index.html
@@ -3,199 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Igbo AFA Word Combinations</title>
+    <title>Igbo Àfà Word Combinations</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Custom styles for a distinct look */
         .afa-card {
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-            transition: transform 0.2s;
+            transition: transform 0.2s, box-shadow 0.3s;
         }
         .afa-card:hover {
-            transform: translateY(-4px);
+            transform: translateY(-6px);
+            box-shadow: 0 12px 18px rgba(0, 0, 0, 0.15);
         }
     </style>
+
+    <!-- App Icon and Install Meta for iPhone -->
+    <link rel="apple-touch-icon" href="afa-icon.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Igbo Àfà App">
 </head>
+
 <body class="bg-gray-50 font-sans p-4 sm:p-8">
 
     <!-- Header and Root Word Section -->
     <div class="max-w-4xl mx-auto mb-10 text-center">
         <h1 class="text-4xl sm:text-5xl font-extrabold text-teal-800 tracking-tight mb-2">
-            IGBO AFA WORD-COMBINATIONS
+            IGBO ÀFÀ WORD-COMBINATIONS
         </h1>
         <p class="text-xl sm:text-2xl text-teal-600 font-semibold mb-6 border-b-2 border-teal-200 pb-3 inline-block">
-            Root: AKA (Ijem/Njem)
+            Root: AKA (Ìjèm / Njem)
         </p>
         <p class="text-gray-600 text-lg">
-            Symbolizing **life's journey** or **spiritual path**.
+            Symbolizing <strong>life’s journey</strong> or <strong>spiritual path</strong>.
         </p>
     </div>
 
     <!-- Word Combinations Grid -->
-    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-6 lg:gap-8">
+    <div id="afaGrid" class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-6 lg:gap-8"></div>
 
-        <!-- Data Points - Each item is a card -->
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA AKWU
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">NDEICHIE</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Ancestors</p>
-            </div>
-        </div>
+    <!-- Footer -->
+    <footer class="mt-16 text-center text-gray-500 text-sm">
+        © 2025 Igbo Àfà Research — Compiled by Shaul Michael.
+    </footer>
 
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA ATULUKPA
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">OJI, NDI EGEDE, UNO</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Iroko, Elder people, House/Home</p>
-            </div>
-        </div>
+    <!-- JSON Data and JS for Dynamic Generation -->
+    <script>
+        const afaCombinations = [
+            { title: "AKA AKWU", meaning: "NDEICHIE", note: "Ancestors" },
+            { title: "AKA ATULUKPA", meaning: "OJI, NDI EGEDE, UNO", note: "Iroko, Elders, Home" },
+            { title: "AKA AGHALI", meaning: "ANU", note: "Animal/Beast" },
+            { title: "AKA ETE", meaning: "NDIMMIRI", note: "Water spirits / Beings of water" },
+            { title: "AKA ORA", meaning: "IDINMA NWEREONWE", note: "Goodness, independence" },
+            { title: "AKA OSE", meaning: "IYI OJI, NGWU", note: "Black stream, spiritual power" },
+            { title: "AKA ODI", meaning: "AJA ANI", note: "Earth sacrifice / offering" },
+            { title: "AKA OBALA", meaning: "ANYANWU NA AGBARA", note: "Sun and deities" },
+            { title: "AKA IGBI", meaning: "KAM GWA GI", note: "Let me tell you" },
+            { title: "AKA OFU", meaning: "CHI", note: "Personal god / destiny" },
+            { title: "AKA OTULE", meaning: "OJI", note: "Iroko tree / Kola" },
+            { title: "AKA OKALA", meaning: "AKA EKPE", note: "Right Hand / Right Side" },
+            { title: "AKA OGHELI", meaning: "AROBINAGU, EFIO", note: "Wealth, Wind" },
+            { title: "AKA OGUTE", meaning: "ANI", note: "Earth / Land" },
+            { title: "AKA ULULU", meaning: "NDI IKWUNNE", note: "Maternal lineage" },
+            { title: "AKA NAMBO", meaning: "NJEM", note: "Journey / Travel" },
+        ];
 
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA AGHALI
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">ANU</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Animal/Beast</p>
-            </div>
-        </div>
+        const grid = document.getElementById("afaGrid");
 
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA ETE
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">NDIMMIRI</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Water spirits/Beings of water</p>
-            </div>
-        </div>
+        afaCombinations.forEach(item => {
+            const card = document.createElement("div");
+            card.className = "afa-card rounded-xl overflow-hidden bg-white";
 
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA ORA
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">IDINMA NWEREONWE</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Goodness, independence, self-sufficiency</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA OSE
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">IYI OJI, NGWU</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Black stream/river, spiritual power</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA ODI
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">AJA ANI</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Earth sacrifice/offering</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA OBALA
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">ANYANWU NA AGBARA</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Sun and spirits/deities</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA IGBI
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">KAM GWA GI</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Let me tell you</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA OFU
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">CHI</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Personal god/destiny</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA OTULE
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">OJI</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Iroko tree (or Kola)</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA OKALA
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">AKA EKPE</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Right Hand/Right Side</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA OGHELI
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">AROBINAGU, EFIO</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Wealth/Affluence, Wind</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA OGUTE
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">ANI</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Earth/Land</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA ULULU
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">NDI IKWUNNE</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Maternal relations/Mother's lineage</p>
-            </div>
-        </div>
-
-        <div class="afa-card rounded-xl overflow-hidden bg-white">
-            <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">
-                AKA NAMBO
-            </div>
-            <div class="p-4 sm:p-6 text-gray-800">
-                <p class="text-xl font-medium">NJEM</p>
-                <p class="text-sm text-gray-500 mt-1 italic">Journey/Travel</p>
-            </div>
-        </div>
-
-    </div>
+            card.innerHTML = `
+                <div class="bg-teal-700 p-4 text-white font-bold text-lg rounded-t-xl">${item.title}</div>
+                <div class="p-4 sm:p-6 text-gray-800">
+                    <p class="text-xl font-medium">${item.meaning}</p>
+                    <p class="text-sm text-gray-500 mt-1 italic">${item.note}</p>
+                </div>
+            `;
+            grid.appendChild(card);
+        });
+    </script>
 
 </body>
 </html>
